fix: font visibility

--- a/assets/css/global/pallete.scss
+++ b/assets/css/global/pallete.scss
@@ -6,6 +6,7 @@ $text: #4f4f4f;
 $text-light: #bab7b7;
 
 $white: #ffffff;
+$black: #000000;
 
 $bg-light: #fbfafa;
 $bg-neutral: #f5f2f2;
