--- a/pages/curso-de-noivos-online/styles.scss
+++ b/pages/curso-de-noivos-online/styles.scss
@@ -3,7 +3,7 @@
   min-height: 1240px;
 
   &::before {
-    background-color: $bg-neutral;
+    background-color: $black;
     content: '';
     position: absolute;
     height: 975px;
